Add integration test and docker setup.